Fix mobile photo detail preview clipping

--- a/src/app/(payload)/custom.scss
+++ b/src/app/(payload)/custom.scss
@@ -3424,13 +3424,31 @@ body:has(.template-default--nav-open) .template-default__nav-toggler-container {
     border-radius: var(--cms-control-radius) !important;
   }
 
+  .collection-edit--photos .file-details {
+    line-height: 0;
+  }
+
   .collection-edit--photos .file-details header,
   .collection-edit--photos .file-details .thumbnail {
     overflow: hidden;
   }
 
+  .collection-edit--photos .file-details header {
+    display: block;
+    padding: 0;
+  }
+
   .collection-edit--photos .file-details .thumbnail {
+    display: block;
+    margin: 0;
+    padding-top: 0 !important;
     border-bottom: 0;
+  }
+
+  .collection-edit--photos .file-details .thumbnail img,
+  .collection-edit--photos .file-details .thumbnail svg {
+    position: static !important;
+    display: block;
   }
 
   .collection-edit--photos .file-details__main-detail {
